Deleting the default cube breaks face set initialization with joining objects #101623

Closed
opened 2022-10-05 17:31:41 +02:00 by Sun Kim · 17 comments
Contributor

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.5.1 30.0.15021.11005

Blender Version
Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: 0759f671ce
Worked: unknown. I can confirm this in 2.93 too.

Also confirmed with latest 3.4 daily b804f925c70c.

Short description of error
Joining objects should initialize face sets per their source objects. Deleting the default cube breaks this feature for the file.

Exact steps for others to reproduce the error

  • From the startup file, delete the default cube
  • Add two or more mesh objects
  • Join them
  • Switch to Sculpt mode with the joined object. No face sets are initilized

TheCurseoftheDefaultCube.mp4

(No, this is not a joke about the default cube!)

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.5.1 30.0.15021.11005 **Blender Version** Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: `0759f671ce` Worked: unknown. I can confirm this in 2.93 too. Also confirmed with latest 3.4 daily `b804f925c70c`. **Short description of error** Joining objects should initialize face sets per their source objects. Deleting the default cube breaks this feature for the file. **Exact steps for others to reproduce the error** * From the startup file, delete the default cube * Add two or more mesh objects * Join them * Switch to Sculpt mode with the joined object. No face sets are initilized [TheCurseoftheDefaultCube.mp4](https://archive.blender.org/developer/F13618197/TheCurseoftheDefaultCube.mp4) (No, this is not a joke about the default cube!)
Author
Contributor

Added subscriber: @persun

Added subscriber: @persun
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

This happens because the default cube in the factory startup file has a face sets layer. The "Initialize by Loose Parts" behavior when joining only happens when one of the meshes has face sets.
Joining mesh objects shouldn't create face sets from scratch when there are no face sets in the first place.

It is a bit confusing though, since there's no way to tell if a mesh has face sets if they all have the default value. To make it more predictable, I'd propose removing the face sets layer from the default startup file.

This happens because the default cube in the factory startup file has a face sets layer. The "Initialize by Loose Parts" behavior when joining only happens when one of the meshes has face sets. Joining mesh objects shouldn't create face sets from scratch when there are no face sets in the first place. It is a bit confusing though, since there's no way to tell if a mesh has face sets if they all have the default value. To make it more predictable, I'd propose removing the face sets layer from the default startup file.
Author
Contributor

Ah, that makes sense.

To make it more predictable, I'd propose removing the face sets layer from the default startup file.

Yeah this will also help the cases where beginning users who don't have the concept of face sets confuse the colors as a bug.

Ah, that makes sense. > To make it more predictable, I'd propose removing the face sets layer from the default startup file. Yeah this will also help the cases where beginning users who don't have the concept of face sets confuse the colors as a bug.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

It looks more like a design issue that needs feedback from the #sculpt_paint_texture team.

It looks more like a design issue that needs feedback from the #sculpt_paint_texture team.

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

This also applies to newly created geometry in edit mode, which used to be automatically marked as a new face set.

I'll look into the design of this. Personally I like that newly added geometry is always marked as a new face set,
but this behavior often lead to confusion and invalid bug reports for those that don't use or want face sets.

The new behavior has the upside that face sets are an opt-in feature.

This also applies to newly created geometry in edit mode, which used to be automatically marked as a new face set. I'll look into the design of this. Personally I like that newly added geometry is always marked as a new face set, but this behavior often lead to confusion and invalid bug reports for those that don't use or want face sets. The new behavior has the upside that face sets are an opt-in feature.
Member

@HooglyBoogly We discussed this in the recent module meeting. We all agreed that the new behavior after the recent changes is more desirable.
This way the user needs to intentionally create or initialize a face set first, so that face sets are automatically created on join or edit operations.
If they want to create face sets per joined object in hindsight, the Initialize operators can still be used.

Next we should adjust existing code that tries to create face sets when joining objects, to work with this new behavior.

Also, if an object that has face sets is joined into an object that has none, it will result in all face sets being lost. This needs to be fixed.
Any existing face sets must be joined into another object as well.

And yes, the startup files need to be updated.

@HooglyBoogly We discussed this in the recent module meeting. We all agreed that the new behavior after the recent changes is more desirable. This way the user needs to intentionally create or initialize a face set first, so that face sets are automatically created on join or edit operations. If they want to create face sets per joined object in hindsight, the Initialize operators can still be used. Next we should adjust existing code that tries to create face sets when joining objects, to work with this new behavior. Also, if an object that has face sets is joined into an object that has none, it will result in all face sets being lost. This needs to be fixed. Any existing face sets must be joined into another object as well. And yes, the startup files need to be updated.
Hans Goudey self-assigned this 2022-10-14 14:33:09 +02:00
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Member

Next we should adjust existing code that tries to create face sets when joining objects, to work with this new behavior.

Could you be more specific about what the join operator should do?

Also, if an object that has face sets is joined into an object that has none, it will result in all face sets being lost.

I wasn't able to reproduce this. Could you give steps to reproduce the issue? Thanks.

>Next we should adjust existing code that tries to create face sets when joining objects, to work with this new behavior. Could you be more specific about what the join operator should do? >Also, if an object that has face sets is joined into an object that has none, it will result in all face sets being lost. I wasn't able to reproduce this. Could you give steps to reproduce the issue? Thanks.
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

Could you be more specific about what the join operator should do?

@JosephEagar Can you talk with Hans about this since you brought this up at the meeting? You are more familiar with the code.

I wasn't able to reproduce this. Could you give steps to reproduce the issue? Thanks.

You are right, I cannot reproduce this anymore either in the latest master.

> Could you be more specific about what the join operator should do? @JosephEagar Can you talk with Hans about this since you brought this up at the meeting? You are more familiar with the code. > I wasn't able to reproduce this. Could you give steps to reproduce the issue? Thanks. You are right, I cannot reproduce this anymore either in the latest master.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

I'm going to close this since we can't reproduce it and the main issues have been resolved. If it comes up again, we can reopen this report or open a new one.

I'm going to close this since we can't reproduce it and the main issues have been resolved. If it comes up again, we can reopen this report or open a new one.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101623
No description provided.