Sculpt: Remove face sets from default cube

As discussed in T101623, since face sets have become optionally stored,
(see b5f7af31d6d474c3b4) the default cube shouldn't have face sets--
they should be created explicitly by the user instead. This may improve
performance when modifying the default cube mesh.